--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <link rel="stylesheet" type="text/css" href="assets/css/loading.css">
     <title>DUMPLINGS</title>
  <!--    <link rel="shortcut icon" href="assets/img/dumpling.PNG"> -->
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon/favicon-16x16.png">
-    <link rel="manifest" href="assets/img/icon/site.webmanifest">
-    <link rel="mask-icon" href="assets/img/icon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/icon/apple-touch-icon.PNG">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon/favicon-32x32.PNG">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon/favicon-16x16.PNG">
+<!--     <link rel="manifest" href="assets/img/icon/site.webmanifest">
+ -->    <link rel="mask-icon" href="assets/img/icon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
