--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <title>DUMPLINGS</title>
  <!--    <link rel="shortcut icon" href="assets/img/dumpling.PNG"> -->
     <link rel="apple-touch-icon" sizes="152x152" href="assets/img/icon/apple-touch-icon.PNG">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon/favicon-32x32.PNG">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon/favicon-16x16.PNG">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="assets/img/icon/favicon-32x32.PNG">
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="assets/img/icon/favicon-16x16.PNG">
 <!--     <link rel="manifest" href="assets/img/icon/site.webmanifest">
  -->    <link rel="mask-icon" href="assets/img/icon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
