--- a/index.html
+++ b/index.html
@@ -113,112 +113,112 @@
             <div class="gallery-item" id="g1"> 
               <img src="assets/img/gallery_samosa.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=lrEtyvREVtk" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Samosas</p>
             </div>
             <div class="gallery-item" id="g2"> 
               <img src="assets/img/gallery_jiaozi.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=J6xFRlG5Qxg" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Jiaozi</p>
             </div>
             <div class="gallery-item" id="g3" > 
               <img src="assets/img/gallery_mandu.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=zECZXmDmHR0" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Mandu</p>
             </div>
             <div class="gallery-item" id="g4"> 
               <img src="assets/img/gallery_dango.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=tKw7XtOr3Ns" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Dango</p>
             </div>
              <div class="gallery-item" id="g2"> 
               <img src="assets/img/gallery_pierogi.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=GQ0GiTKzu38" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Pierogi</p>
             </div>
              <div class="gallery-item" id="g2"> 
               <img src="assets/img/gallery_manti.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=j_5FXVU6NWw" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Manti</p>
             </div>
              <div class="gallery-item" id="g3"> 
               <img src="assets/img/gallery_momo.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=RUJ888EK0Jc" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Momo</p>
             </div>
              <div class="gallery-item" id="g4"> 
               <img src="assets/img/gallery_empanada.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=5569EtjDU_M" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Empanada</p>
             </div>
              <div class="gallery-item" id="g3"> 
               <img src="assets/img/gallery_xiaolongbao.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=3gv805Yvms0" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Xiaolongbao</p>
             </div>
              <div class="gallery-item" id="g3"> 
               <img src="assets/img/gallery_ravioli.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=PtR3U-N2PWA" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Ravioli</p>
             </div>
              <div class="gallery-item" id="g3"> 
               <img src="assets/img/gallery_gnocchi.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=CUDRhJDbVv4" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Gnocchi</p>
             </div>
              <div class="gallery-item" id="g4"> 
               <img src="assets/img/gallery_tangyuan.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=eU7hJF5rbek" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Tangyuan</p>
             </div>
              <div class="gallery-item" id="g4"> 
               <img src="assets/img/gallery_crab.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=cajdSGcRpP4" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Crab Ragoon</p>
             </div>
              <div class="gallery-item" id="g4"> 
               <img src="assets/img/gallery_pelmeni.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=YO7AdLsUSec" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Pelmeni</p>
             </div>
              <div class="gallery-item" id="g4"> 
               <img src="assets/img/gallery_apple.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=5rUOEp5FOfI" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Apple Dumpling</p>
             </div>
              <div class="gallery-item" id="g4"> 
               <img src="assets/img/gallery_modak.jpg">
               <div id="recipe-button">
-                <a href="https://www.google.com" target="_blank">Click for<br>Recipe</a>
+                <a href="https://www.youtube.com/watch?v=Og5sRXe59Kw" target="_blank">Click for<br>Recipe</a>
               </div>
               <p>Modak</p>
             </div>
